WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129085
FTL should not emit stack overflow checks in leaf functions
https://bugs.webkit.org/show_bug.cgi?id=129085
Summary
FTL should not emit stack overflow checks in leaf functions
Filip Pizlo
Reported
2014-02-19 23:44:34 PST
Patch forthcoming.
Attachments
the patch
(3.25 KB, patch)
2014-02-19 23:45 PST
,
Filip Pizlo
msaboff
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-02-19 23:45:59 PST
Created
attachment 224721
[details]
the patch
Michael Saboff
Comment 2
2014-02-20 08:39:55 PST
Comment on
attachment 224721
[details]
the patch r=me
Filip Pizlo
Comment 3
2014-02-20 12:32:08 PST
Landed in
http://trac.webkit.org/changeset/164442
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug