FTL should not emit stack overflow checks in leaf functions https://bugs.webkit.org/show_bug.cgi?id=129085

Reviewed by Michael Saboff.

Miniscule (0.5%) speed-up on V8v7.

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::lower):
(JSC::FTL::LowerDFGToLLVM::didOverflowStack):



Canonical link: https://commits.webkit.org/147150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164442 268f45cc-cd09-0410-ab3c-d52691b4dbfc